2012-11-05  kitone  <kitone@gna.org>

	* plugins/actions/bestfit/bestfit.cc:
	* plugins/actions/errorchecking/dialog-error-checking-preferences.ui:
	* plugins/actions/errorchecking/toolongdisplaytime.h:
	* plugins/actions/errorchecking/tooshortdisplaytime.h:
	* plugins/actions/minimizeduration/minimizeduration.cc:
	* plugins/actions/preferences/dialog-preferences.ui:
	* plugins/actions/preferences/timingpage.h:
	* src/defaultcfg.cc:
	* src/document.cc:
	* src/subtitle.cc:
	* src/subtitle.h:
	* src/subtitlemodel.cc:
	* src/subtitlemodel.h:
	* src/subtitles.cc:
	* src/subtitles.h:
	* src/subtitleview.cc:
	* src/subtitleview.h:
	* src/utility.cc:
	* src/utility.h:
	Automatic highlighting for all timing errors. Patch by Tomas Partl <eltomito>.

2012-11-01  kitone  <kitone@gna.org>

	* src/vp/videoplayer.cc:
	Fix bug #20074 : Scene cut based keyframe detection. Subtitle should disappears at end time.

2012-09-14  kitone  <kitone@gna.org>

	* plugins/actions/extendlength/extendlength.cc:
	* plugins/actions/minimizeduration/minimizeduration.cc:
	* plugins/actions/moveafterprecedingsubtitle/moveafterprecedingsubtitle.cc:
	* plugins/actions/stacksubtitles/stacksubtitles.cc:
	* share/menubar.xml:
	Reverse command for extendlength, minimizeduration,
	moveafterprecedingsubtitle, stacksubtitles. Patch by Tomas Partl <eltomito>.

2012-09-08  kitone  <kitone@gna.org>

	* plugins/actions/adjusttime/adjusttime.cc:
	Adds functions to move subtitle start and end by 1 frame. Patch by Tomas Partl <eltomito>.

2012-09-08  kitone  <kitone@gna.org>

	* plugins/actions/dialoguize/dialog-dialoguize-preferences.ui:
	Changes the preference dialog source file so that it doesn't need gtk+ 3.0 and settles for version 2.16.
	Patch by Tomas Partl <eltomito>.

2012-09-08  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/gui/checkbuttonwithmemory.cc:
	* src/gui/checkbuttonwithmemory.h:
	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h: